# Kronos

./: .gitignore  HARDENING_ROADMAP.md  README.md  pyproject.toml  requirements-quality.txt  requirements.txt
.github/workflows/: checkpoint-regression.yml  offline-tests.yml  package-smoke.yml  quality-security.yml
data/cards/: DATA_CARD_TEMPLATE.md
data/cards/reference_daily/: DATA_CARD.md
docs/data/: REFERENCE_SOURCE_ACQUISITION_DECISION.md  REFERENCE_SOURCE_ASSESSMENT.md  STORAGE_POLICY.md
docs/evaluation/: AUDIT_GATED_RUNNER.md  BASELINE_SUITE.md  EXPERIMENT_AND_MODEL_REGISTRY.md  METRICS_COSTS_AND_AGGREGATION.md  WALK_FORWARD_PROTOCOL.md
docs/inference/: PROBABILISTIC_FORECAST_API.md
docs/operations/: LOCAL_RUNBOOK.md  QUALITY_AND_SECURITY_GATES.md
docs/reviews/: ADVERSARIAL_REVIEW_DATA_ACQUISITION.md  ADVERSARIAL_REVIEW_LOCAL_RUNTIME.md  ADVERSARIAL_REVIEW_PHASE_0.md  ADVERSARIAL_REVIEW_PHASE_2.md  ADVERSARIAL_REVIEW_PHASE_3.md  ADVERSARIAL_REVIEW_PHASE_4.md  ADVERSARIAL_REVIEW_PHASE_4D.md  ADVERSARIAL_REVIEW_PHASE_5A.md  ADVERSARIAL_REVIEW_PHASE_5B.md  ADVERSARIAL_REVIEW_PHASE_5C.md  ADVERSARIAL_REVIEW_PHASE_5D.md  ADVERSARIAL_REVIEW_PHASE_7.md  ADVERSARIAL_REVIEW_QUALITY_SECURITY.md  ADVERSARIAL_REVIEW_REFERENCE_SOURCE_GATE.md  ADVERSARIAL_REVIEW_WEBUI_SECURITY.md
docs/status/: KRONOS_IMPLEMENTATION_STATUS.md  KRONOS_RESEARCH_STATUS.md
finetune/: SAFE_DATA_FORMAT.md  __init__.py  archive_paths.py  archive_writer.py  backtest_io.py  config.py  data_io.py  dataset.py  qlib_data_preprocess.py  qlib_test.py
kronos_data/: __init__.py  adjustments.py  calendars.py  hashing.py  leakage.py  manifests.py  schema.py  source_gate.py  validation.py
kronos_eval/: __init__.py  aggregation.py  baselines.py  costs.py  metrics.py  registry.py  runner.py  walk_forward.py
kronos_runtime/: __init__.py  cli.py  device.py
model/: __init__.py  catalog.py  forecast.py  kronos.py  sampling.py
research/: DECISION_LOG.md  EXPERIMENT_REGISTER.jsonl  OPEN_GAPS.md  REPORT_REGISTER.md
scripts/: bootstrap.ps1  verify_local.py
tests/: test_archive_paths.py  test_backtest_io.py  test_baselines.py  test_data_io.py  test_dataset_manifests.py  test_evaluation_costs.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_experiment_registry.py  test_finetune_config.py  test_finetune_csv_normalization.py  test_fold_aggregation.py  test_forecast_api.py  test_kronos_regression.py  test_leakage_auditor.py  test_market_data_validation.py  test_model_catalog.py  test_predictor.py  test_reference_source_gate.py  test_runtime_cli.py  test_sampling.py  test_walk_forward.py
tests/webui/: test_security.py
webui/: README.md  __init__.py  app.py  requirements.txt  run.py  security.py  start.sh
webui/templates/: index.html
