[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos-timeseries"
version = "0.1.0.dev0"
description = "Foundation models for financial candlestick time-series forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kronos contributors" },
]
keywords = ["time-series", "finance", "forecasting", "transformer", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0,<3",
  "torch>=2.0",
  "einops>=0.8,<1",
  "huggingface-hub>=0.33.1,<2",
  "matplotlib>=3.9,<4",
  "tqdm>=4.67,<5",
  "safetensors>=0.6,<1",
]

[project.optional-dependencies]
finetune = [
  "PyYAML>=6.0",
  "comet-ml>=3.0",
]
webui = [
  "Flask>=2.3,<4",
  "flask-cors>=4,<7",
  "plotly>=5.17,<7",
]
test = [
  "pytest>=8,<10",
]
dev = [
  "build>=1,<2",
  "pytest>=8,<10",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/CamzCodex/Kronos"
Source = "https://github.com/CamzCodex/Kronos"
Issues = "https://github.com/CamzCodex/Kronos/issues"

[tool.setuptools.packages.find]
include = ["model", "model.*"]

[tool.setuptools.package-data]
model = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that download checkpoints or use external services",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "tests/data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "E501",
  "F403",
  "F405",
]

[tool.ruff.lint.isort]
known-first-party = ["model"]
