[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos-timeseries"
version = "0.1.0.dev0"
description = "Foundation models for financial candlestick time-series forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Kronos contributors" },
]
keywords = ["time-series", "finance", "forecasting", "transformer", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0,<3",
  "torch>=2.11,<2.14; platform_system != 'Windows'",
  "torch>=2.9,<2.14; platform_system == 'Windows'",
  "einops>=0.8,<1",
  "huggingface-hub>=0.33.1,<1",
  "socksio>=1.0,<2",
  "matplotlib>=3.9,<4",
  "tqdm>=4.67,<5",
  "safetensors>=0.6,<1",
]

[project.optional-dependencies]
finetune = [
  "PyYAML>=6.0",
  "comet-ml>=3.0",
]
webui = [
  "Flask>=3.1.3,<4",
  "plotly>=5.17,<7",
]
test = [
  "pytest>=8,<10",
]
dev = [
  "build>=1,<2",
  "mypy>=1.14,<3",
  "pip-audit>=2.10,<3",
  "pytest>=8,<10",
  "ruff>=0.9",
]

[project.scripts]
kronos-runtime = "kronos_runtime.cli:main"
kronos-web = "webui.run:main"

[project.urls]
Homepage = "https://github.com/CamzCodex/Kronos"
Source = "https://github.com/CamzCodex/Kronos"
Issues = "https://github.com/CamzCodex/Kronos/issues"

[tool.setuptools.packages.find]
include = [
  "model",
  "model.*",
  "finetune",
  "finetune.*",
  "kronos_data",
  "kronos_data.*",
  "kronos_eval",
  "kronos_eval.*",
  "kronos_runtime",
  "kronos_runtime.*",
  "webui",
  "webui.*",
]

[tool.setuptools.package-data]
model = ["py.typed"]
kronos_data = ["py.typed"]
kronos_eval = ["py.typed"]
webui = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that download checkpoints or use external services",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "tests/data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "E501",
  "F403",
  "F405",
]

[tool.ruff.lint.isort]
known-first-party = ["finetune", "kronos_data", "kronos_eval", "model", "webui"]

[tool.mypy]
python_version = "3.10"
files = [
  "kronos_data",
  "kronos_eval",
  "kronos_runtime",
  "model/catalog.py",
  "model/forecast.py",
  "webui/security.py",
  "webui/run.py",
]
follow_imports = "skip"
ignore_missing_imports = true
no_site_packages = true
show_error_codes = true
warn_unused_configs = true
